--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .top-main {
-  background-image: url('../../../public/bg_image.webp');
+  // background-image: url('../../../public/bg_image.webp');
+  // background-color:palegreen;
   background-repeat: no-repeat;
   background-size: contain;
   padding: 200px 0 100px;
