--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,32 +2,50 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.top-main {
-  // background-image: url('../../../public/bg_image.webp');
-  // background-color:palegreen;
-  background-repeat: no-repeat;
+.top {
+  height: 820px;
+  background-image: url("../images/poker.jpeg") !important;
   background-size: contain;
-  padding: 200px 0 100px;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: auto;
-  min-height: 100%;
-  background-position: center 50%;
 }
 
-
+.top-main {
+  padding: 100px 0 0;
+  text-align: center;
+  width: 1300px;
+  height: 600px;
+}
 
 .enter-form {
-  font-size: 20px;
-  height: 100px;
-}
-.input {
-  width: 100%;
+  margin-top: 60px;
 }
 
 .result {
-  font-size: 24px;
+  font-size: 40px;
   width: auto;
+}
+
+.title {
+  font-size: 70px;
+  margin: 0;
+}
+
+.submit-button {
+  height: 50px;
+  width: 70px;
+}
+
+.enter-area {
+  height: 50px;
+  width: 300px;
+}
+
+::placeholder {
+  height: 50px;
+  text-align: center;
+  font-size: 25px;
+}
+
+input {
+  font-size: 25px;
+  text-align: center;
 }
